--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!-- About -->
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 
 <!-- Head -->
 <head>
@@ -55,11 +55,11 @@
         <!-- Actions -->
         <nav class='row'>
             <a href='/' class='row button'>
-                <svg><use href="images/sprites.svg#home"></use></svg>
+                <svg><use href='images/sprites.svg#home'></use></svg>
                 <span class='sh2'>Home</span>
             </a>
             <a class='row button' id='selected'>
-                <svg><use href="images/sprites.svg#bookmark"></use></svg>
+                <svg><use href='images/sprites.svg#bookmark'></use></svg>
                 <span class='sh2'>About</span>
             </a>
         </nav>
@@ -80,14 +80,14 @@
                     As you probably saw on the home page, I'm a software designer. I currently live in New York City and work at Ramp.
                 </p>
                 <p class='p1'>
-                    Before that, I was at Cornell where I went to some classes but mostly <a href='https://bit.ly/IntroDPDSP20' target='_blank' rel='noopener'>taught classes about design</a> <span class='sh2'>[some talent pupils — <a href='https://tisealatise.webflow.io' target="_blank" rel='noopener'>1</a>, <a href='https://emilyromero.notion.site/emilyromero/Yello-My-name-is-Emily-8734e7293ccb416b8372d45523b801ef' target='_blank' rel='noopener'>2</a>]</span>. In my free time, I met great friends and mentors without whom I wouldn't be here today <span class='sh2'>[aforementioned mentors — <a href='https://twitter.com/sahkho' target='_blank' rel='noopener'>1</a>, <a href='https://hasque.com' target='_blank' rel='noopener'>2</a>, <a href='https://gk3.website' target='_blank' rel='noopener'>3</a>]</span>. If you want to learn more about me, feel free to check out some of my inspirations <span class='sh2'>[<a href='https://www.are.na/zain-khoja' target='_blank' rel='noopener'>1</a>, <a href='https://letterboxd.com/zainkho/' target='_blank' rel='noopener'>2</a>, <a href='https://zainkho.notion.site/54a75ae80c6145b1b0e663aa9f942fe7?v=1bc2ffcb55d04f6fba1689a1a9c48086&pvs=4' target='_blank' rel='noopener'>3</a>]</span>.
+                    Before that, I was at Cornell where I went to some classes but mostly <a href='https://bit.ly/IntroDPDSP20' target='_blank' rel='noopener'>taught classes about design ⇗⬀↗️</a> <span class='sh2'>[some talent pupils — <a href='https://tisealatise.webflow.io' target='_blank' rel='noopener'>1</a>, <a href='https://emilyromero.notion.site/emilyromero/Yello-My-name-is-Emily-8734e7293ccb416b8372d45523b801ef' target='_blank' rel='noopener'>2</a>]</span>. In my free time, I met great friends and mentors without whom I wouldn't be here today <span class='sh2'>[aforementioned mentors — <a href='https://twitter.com/sahkho' target='_blank' rel='noopener'>1</a>, <a href='https://hasque.com' target='_blank' rel='noopener'>2</a>, <a href='https://gk3.website' target='_blank' rel='noopener'>3</a>]</span>. If you want to learn more about me, feel free to check out some of my inspirations <span class='sh2'>[<a href='https://www.are.na/zain-khoja' target='_blank' rel='noopener'>1</a>, <a href='https://letterboxd.com/zainkho/' target='_blank' rel='noopener'>2</a>, <a href='https://zainkho.notion.site/54a75ae80c6145b1b0e663aa9f942fe7?v=1bc2ffcb55d04f6fba1689a1a9c48086&pvs=4' target='_blank' rel='noopener'>3</a>]</span>.
                 </p>
                 <p class='p1'>
                     If you want to find me, look for places that 1) celebrate Dallas sports, 2) serve sweet tea, or 3) brew local coffee before 9am. I also love seeing cool stuff; if you have something to show, <a href='mailto:zainkhoja7@gmail.com?subject=Look I made something cool...!' target='_blank' rel='noopener'>shoot me a message</a>.
                 </p>
             </div>
 
-            <img alt="avatar" src="images/zk-avi.png" id="avi">
+            <img alt='avatar' src='images/zk-avi.png' id='avi'>
 
         </div>
     </main>
@@ -109,18 +109,18 @@
                     <feBlend mode='normal' in2='shape' result='effect1_innerShadow_946_14435'/>
                 </filter>
             </defs>
-            <use href="images/sprites.svg#zk-logo" filter='url(#inset)'></use>
+            <use href='images/sprites.svg#zk-logo' filter='url(#inset)'></use>
         </svg></a>
         <!-- Links -->
-        <nav class="row">
+        <nav class='row'>
             <a href='https://twitter.com/zainkho' target='_blank' rel='noopener' class='row button'>
-                <svg><use href="images/sprites.svg#twitter"></use></svg>
+                <svg><use href='images/sprites.svg#twitter'></use></svg>
             </a>
             <a href='https://linkedin.com/in/zainkho' target='_blank' rel='noopener' class='row button'>
-                <svg><use href="images/sprites.svg#linkedin"></use></svg>   
+                <svg><use href='images/sprites.svg#linkedin'></use></svg>   
             </a>
             <a href='zainkho-resume.pdf' target='_blank' rel='noopener' class='row button'>
-                <svg><use href="images/sprites.svg#briefcase"></use></svg>
+                <svg><use href='images/sprites.svg#briefcase'></use></svg>
             </a>
         </nav>
     </footer>
