--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
         <!-- Actions -->
         <nav class='row'>
             <a class='row button' id='selected'>
-                <svg><use href="images/sprites.svg#home"></use></svg>
+                <svg><use href='images/sprites.svg#home'></use></svg>
                 <span class='sh2'>Home</span>
             </a>
             <a href='about.html' class='row button'>
-                <svg><use href="images/sprites.svg#bookmark"></use></svg>
+                <svg><use href='images/sprites.svg#bookmark'></use></svg>
                 <span class='sh2'>About</span>
             </a>
         </nav>
@@ -73,7 +73,7 @@
             <div class='row' id='subtitle'>
                 <p class='sh1'>Software (but also sometimes <a href='magic.html'>other stuff</a>) designer</p>
                 <div class='row' id='weather'>
-                    <svg><use href="images/sprites.svg#sun"></use></svg> 
+                    <svg><use href='images/sprites.svg#sun'></use></svg> 
                     <span class='sh2'>72° & sunny</span>
                 </div>
             </div>
@@ -82,19 +82,19 @@
         <!-- Tiles -->
         <div class='row content'>
 
-            <!-- Headerliners -->
-            <a href='https://ramp.com' target='_blank' rel='noopener' class='column tile tl'>
+            <!-- Headliners -->
+            <a href='https://ramp.com' target='_blank' rel='noopener' class='column tile tl' id='hero'>
                 <div class='column top'>
-                    <svg class='icon-l'><use href="images/sprites.svg#Ramp"></use></svg> 
+                    <svg class='icon-l'><use href='images/sprites.svg#Ramp'></use></svg> 
                     <h2>Ramp</h2>
                 </div>
                 <div class='row bottom'>
                     <p class='sh1'>Automating finance things · 2022 — <span id='flashing'>█</span></p>
                 </div>
             </a>
-            <a href='https://creators.instagram.com' target="_blank" rel='noopener' class='column tile tl'>
+            <a href='https://creators.instagram.com' target='_blank' rel='noopener' class='column tile tl'>
                 <div class='column top'>
-                    <svg class='icon-l'><use href="images/sprites.svg#Instagram"></use></svg> 
+                    <svg class='icon-l'><use href='images/sprites.svg#Instagram'></use></svg> 
                     <h2>Instagram</h2>
                 </div>
                 <div class='row bottom'>
@@ -105,7 +105,7 @@
             <div class='column' id='tile-stack'>
                 <a href='https://www.patchrx.io' target='_blank' rel='noopener' class='column tile ts'>
                     <div class='column top'>
-                        <svg class='icon-s'><use href="images/sprites.svg#PatchRx"></use></svg> 
+                        <svg class='icon-s'><use href='images/sprites.svg#PatchRx'></use></svg> 
                         <h4>PatchRx</h4>
                     </div>
                     <div class='row bottom'>
@@ -114,7 +114,7 @@
                 </a>
                 <a href='https://primer.style' target='_blank' rel='noopener' class='column tile ts'>
                     <div class='column top'>
-                        <svg class='icon-s'><use href="images/sprites.svg#GitHub"></use></svg> 
+                        <svg class='icon-s'><use href='images/sprites.svg#GitHub'></use></svg> 
                         <h4>GitHub</h4>
                     </div>
                     <div class='row bottom'>
@@ -123,7 +123,7 @@
                 </a>
                 <a href='https://blog.prototypr.io/starbucks-for-people-not-machines-92e6651c2af7' target='_blank' rel='noopener' class='column tile ts'>
                     <div class='column top'>
-                        <svg class='icon-s'><use href="images/sprites.svg#Starbucks"></use></svg> 
+                        <svg class='icon-s'><use href='images/sprites.svg#Starbucks'></use></svg> 
                         <h4>Starbucks</h4>
                     </div>
                     <div class='row bottom'>
@@ -152,18 +152,18 @@
                     <feBlend mode='normal' in2='shape' result='effect1_innerShadow_946_14435'/>
                 </filter>
             </defs>
-            <use href="images/sprites.svg#zk-logo" filter='url(#inset)'></use>
+            <use href='images/sprites.svg#zk-logo' filter='url(#inset)'></use>
         </svg></a>
         <!-- Links -->
-        <nav class="row">
+        <nav class='row'>
             <a href='https://twitter.com/zainkho' target='_blank' rel='noopener' class='row button'>
-                <svg><use href="images/sprites.svg#twitter"></use></svg>
+                <svg><use href='images/sprites.svg#twitter'></use></svg>
             </a>
             <a href='https://linkedin.com/in/zainkho' target='_blank' rel='noopener' class='row button'>
-                <svg><use href="images/sprites.svg#linkedin"></use></svg>   
+                <svg><use href='images/sprites.svg#linkedin'></use></svg>   
             </a>
             <a href='zainkho-resume.pdf' target='_blank' rel='noopener' class='row button'>
-                <svg><use href="images/sprites.svg#briefcase"></use></svg>
+                <svg><use href='images/sprites.svg#briefcase'></use></svg>
             </a>
         </nav>
     </footer>
