--- a/magic.html
+++ b/magic.html
@@ -1,7 +1,7 @@
 <!-- Magic -->
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 
 <!-- Head -->
 <head>
@@ -55,15 +55,15 @@
         <!-- Actions -->
         <nav class='row'>
             <a href='/' class='row button'>
-                <svg><use href="images/sprites.svg#home"></use></svg>
+                <svg><use href='images/sprites.svg#home'></use></svg>
                 <span class='sh2'>Home</span>
             </a>
             <a href='about.html' class='row button'>
-                <svg><use href="images/sprites.svg#bookmark"></use></svg>
+                <svg><use href='images/sprites.svg#bookmark'></use></svg>
                 <span class='sh2'>About</span>
             </a>
             <a class='row button' id='selected'>
-                <svg><use href="images/sprites.svg#magic"></use></svg>
+                <svg><use href='images/sprites.svg#magic'></use></svg>
             </a>
         </nav>
     </header>
@@ -71,13 +71,63 @@
     <main class='column'>
         <!-- Title -->
         <div class='column' id='title'>
-            <h1>The "other stuff"</h1>
+            <h1>The 'other stuff'</h1>
             <p class='sh1' id='subtitle'>Digital and physical nonsense I like making</p>
         </div>
 
         <!-- Content -->
-        <div class='row'>
-
+        <div class='row content'>
+            <div class='column content'>
+                <div class='row stuff'>
+                    <video autoplay loop muted src='images/magic/3d-anvil.mp4'></video>
+                </div>
+                <img alt='nasties thrasher sticker' src='images/magic/nasties-thrasher-sticker.png'>
+                <div class='row stuff'>
+                    <video autoplay loop muted src='images/magic/record-player.mp4'></video>
+                </div>
+                <div class='column'>
+                    <div class='row stuff'>
+                        <video autoplay loop muted src='images/magic/magic-qr-code.mp4'></video>
+                    </div>
+                    <a href='https://x.com/benjitaylor/status/1641811921417695232?s=20' target='_blank' rel='noopener' class='row sh3 caption'>
+                       See inspiration →
+                    </a>
+                </div>
+            </div>
+            <div class='column content'>
+                <div class='column'>
+                    <div class='row stuff'>
+                        <video autoplay loop muted src='images/magic/metal-card.mp4'></video>
+                    </div>
+                    <a href='https://x.com/alexwidua/status/1630998774247030786?s=20' target='_blank' rel='noopener' class='row sh3 caption'>
+                        See inspiration →
+                    </a>
+                </div>    
+                <img alt='imessage ehub sticker' src='images/magic/imessage-ehub-sticker.png'>
+                <img alt='appdev retro hoodie' src='images/magic/appdev-retro-hoodie.png'>
+                <img alt='theta tau crewneck' src='images/magic/tt-crewneck.png'>
+            </div>
+            <div class='column content'>
+                <div class='row stuff'>
+                    <video autoplay loop muted src='images/magic/3d-ice-cream.mp4'></video>
+                </div>
+                <img alt='collegetown bagels sticker' src='images/magic/CTB-sticker.png'>
+                
+                <img alt='no winter maintenance sign sticker' src='images/magic/winter-sign-sticker.png'>
+                <img alt='college ave sticker' src='images/magic/college-ave-sticker.png'>
+            </div>
+            <div class='column content'>
+                <div class='row stuff'>
+                    <img alt='ramp coasters' src='images/magic/ramp-coasters.jpg'>
+                </div>
+                <div class='row stuff'>
+                    <video autoplay loop muted src='images/magic/3d-card.mp4'></video>
+                </div>
+                <div class='row stuff'>
+                    <video autoplay loop muted src='images/magic/eatery-blue-refresh.mp4'></video>
+                </div>
+                <img alt='appdev gimme sticker' src='images/magic/appdev-gimme-sticker.png'>
+            </div>
 
         </div>
     </main>
@@ -99,18 +149,18 @@
                     <feBlend mode='normal' in2='shape' result='effect1_innerShadow_946_14435'/>
                 </filter>
             </defs>
-            <use href="images/sprites.svg#zk-logo" filter='url(#inset)'></use>
+            <use href='images/sprites.svg#zk-logo' filter='url(#inset)'></use>
         </svg></a>
         <!-- Links -->
-        <nav class="row">
+        <nav class='row'>
             <a href='https://twitter.com/zainkho' target='_blank' rel='noopener' class='row button'>
-                <svg><use href="images/sprites.svg#twitter"></use></svg>
+                <svg><use href='images/sprites.svg#twitter'></use></svg>
             </a>
             <a href='https://linkedin.com/in/zainkho' target='_blank' rel='noopener' class='row button'>
-                <svg><use href="images/sprites.svg#linkedin"></use></svg>   
+                <svg><use href='images/sprites.svg#linkedin'></use></svg>   
             </a>
             <a href='zainkho-resume.pdf' target='_blank' rel='noopener' class='row button'>
-                <svg><use href="images/sprites.svg#briefcase"></use></svg>
+                <svg><use href='images/sprites.svg#briefcase'></use></svg>
             </a>
         </nav>
     </footer>
