--- a/about.html
+++ b/about.html
@@ -185,6 +185,7 @@
 
 
     <!-- JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src='js/tsparticles.min.js'></script>
     <script src='js/script.js'></script>
 
