--- a/about.html
+++ b/about.html
@@ -134,7 +134,7 @@
                 </p>
                 <p class='p1'>
                     You can find me at <a href='https://maps.app.goo.gl/YexFTqwxCNSrojGu8' target='_blank'>Abraço</a>
-                    most Saturdays ~8am or on the internet <a href='https://twitter.com/zainkho'
+                    most weekends or on the internet <a href='https://twitter.com/zainkho'
                         target='_blank'>@zainkho</a> posting about Dallas sports. I also love seeing cool stuff; if you
                     have something to show, <a
                         href='mailto:zainkhoja7%40gmail.com?subject=Look%20I%20made%20something%20cool...'
